# chainbills

./: .gitmodules  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
cosmwasm/: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md
cosmwasm/artifacts/: chainbills.wasm  checksums.txt
cosmwasm/src/: contract.rs  error.rs  lib.rs  messages.rs  state.rs
cosmwasm/src/interfaces/: activities.rs  max_withdrawal_fees.rs  mod.rs  payables.rs  payments.rs  token_details.rs  withdrawals.rs
cosmwasm/src/multitest/: instantiate.rs  max_withdrawal_fees.rs  mod.rs  owner_can_withdraw.rs
cosmwasm/src/multitest/users/: creating_payables.rs  making_payments.rs  making_withdrawals.rs  mod.rs
evm/: .env.sample  (+9 more)
solana/programs/chainbills/: Cargo.toml
solana/programs/chainbills/src/: constants.rs  error.rs  events.rs  lib.rs  payload.rs
solana/programs/chainbills/src/context/: create_payable.rs  initialize.rs  initialize_payable.rs  initialize_payable_received.rs  initialize_user.rs  mod.rs  owner_withdraw.rs  pay.rs  pay_native.rs  pay_received.rs  record_foreign_payable_update.rs  register_foreign_contract.rs  update_max_fee.rs  update_max_withdrawal_fee.rs  update_max_withdrawal_fee_native.rs  update_max_withdrawal_fees.rs  update_max_withdrawal_fees_native.rs  update_payable.rs  update_payable_received.rs  update_token_foreign_chain.rs  withdraw.rs  withdraw_native.rs  withdraw_received.rs
solana/programs/chainbills/src/handlers/: create_payable.rs  initialize.rs  initialize_payable.rs  initialize_user.rs  mod.rs  owner_withdraw.rs  pay.rs  record_foreign_payable_update.rs  register_foreign_contract.rs  update_max_fee.rs  update_max_withdrawal_fee.rs  update_max_withdrawal_fees.rs  update_payable.rs  update_token_foreign_chain.rs  withdraw.rs
solana/programs/chainbills/src/instructions/: admin_withdraw.rs  initialize_global_stats.rs  initialize_user.rs  mod.rs  pay.rs  withdraw.rs
solana/programs/chainbills/src/instructions/payable/: initialize_payable.rs  mod.rs  update_payable.rs  update_payable_close_status.rs  update_payable_description.rs
solana/programs/chainbills/src/payload/: complete_payment_payload.rs  mod.rs  payable_payload.rs  payment_payload.rs  start_payment_payload.rs
solana/programs/chainbills/src/state/: activity_record.rs  chain_items.rs  chain_stats.rs  config.rs  consumed_wormhole_message.rs  foreign_contract.rs  global_stats.rs  max_fee_details.rs  mod.rs  payable.rs  payable_activity_info.rs  payable_chain_counter.rs  payable_foreign.rs  payable_items.rs  payable_payment.rs  payable_per_chain_payment_info.rs  payable_per_chain_payments_counter.rs  payable_withdrawal_counter.rs  payable_withdrawal_info.rs  payment.rs  registered_foreign_contract.rs  token_and_amount.rs  token_and_amount_foreign.rs  token_details.rs  token_foreign_chain.rs  user.rs  user_activity_info.rs  user_address.rs  user_payment.rs  withdrawal.rs  wormhole_received.rs
(+289 files in other folders)
