[package]
name = "chainbills"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chainbills"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
solana-program = "=1.17.0"
anchor-spl = "0.29.0"
wormhole-anchor-sdk = {version = "0.29.0-alpha.1", features = ["token-bridge"]}
