[package]
name = "chainbills"
version = "0.1.0"
description = "Cross-chain Crypto Payment Gateway"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chainbills"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["testnet"]
mainnet = ["wormhole-anchor-sdk/mainnet", "wormhole-cctp-solana/mainnet"]
testnet = ["wormhole-anchor-sdk/solana-devnet", "wormhole-cctp-solana/testnet"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "wormhole-anchor-sdk/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
solana-program = "=1.18.20"
anchor-spl = "0.30.1"
wormhole-anchor-sdk = {version = "0.30.1-alpha.3", default-features = false}
bytemuck = "1"
wormhole-cctp-solana = { version = "0.3.0-alpha.0", features = ["cpi", "testnet"] }
